--- a/Front-end_Tiennh21/Assignment/layout/Profile.html
+++ b/Front-end_Tiennh21/Assignment/layout/Profile.html
@@ -26,12 +26,12 @@
 
                     <div class="form-check form-check-inline">
                         <input ng-model="student.gender" type="radio" class="form-check-input" id="gender" name="gender"
-                            value="true">
+                            value="1">
                         <label class="form-check-label light-blue-text" for="gender">Nam</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input ng-model="student.gender" type="radio" class="form-check-input" id="gender2"
-                            name="gender" value="false">
+                            name="gender" value="0">
                         <label class="form-check-label light-blue-text" for="gender2">Nữ</label>
                     </div>
 
