--- a/Front-end_Tiennh21/Assignment/layout/ListTest.html
+++ b/Front-end_Tiennh21/Assignment/layout/ListTest.html
@@ -4,7 +4,7 @@
     </h3>
 
     <div class="row">
-        <div ng-repeat="sub in subjects| limitTo:4:cout" class="col-md-6 mb-4" style="min-height: 500px;">
+        <div ng-repeat="sub in quizzs| limitTo:4:cout" class="col-md-6 mb-4" style="min-height: 500px;">
             <div class="view overlay rounded z-depth-1 d-flex justify-content-center white">
                 <img src="images/logos/{{sub.Logo}}" class="img-fluid w-50" alt="Sample project image">
                 <a>
