--- a/Front-end_Tiennh21/Assignment/layout/demo.html
+++ b/Front-end_Tiennh21/Assignment/layout/demo.html
@@ -1,79 +1,49 @@
-<!DOCTYPE html>  
- <!-- index.php !-->  
- <html>  
-      <head>  
-           <title>Webslesson Tutorial | AngularJS Tutorial with PHP - Update / Edit Mysql Table Data</title>  
-           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />  
-           <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>  
-      </head>  
-      <body>  
-           <br /><br />  
-           <div class="container" style="width:500px;">  
-                <h3 align="center">AngularJS Tutorial with PHP - Update / Edit Mysql Table Data</h3>  
-                <div ng-app="myapp" ng-controller="usercontroller" ng-init="displayData()">  
-                     <label>First Name</label>  
-                     <input type="text" name="first_name" ng-model="firstname" class="form-control" />  
-                     <br />  
-                     <label>Last Name</label>  
-                     <input type="text" name="last_name" ng-model="lastname" class="form-control" />  
-                     <br />  
-                     <input type="hidden" ng-model="id" />  
-                     <input type="submit" name="btnInsert" class="btn btn-info" ng-click="insertData()" value="{{btnName}}"/>  
-                     <br /><br />  
-                     <table class="table table-bordered">  
-                          <tr>  
-                               <th>First Name</th>  
-                               <th>Last Name</th>  
-                               <th>Update</th>  
-                          </tr>  
-                          <tr ng-repeat="x in names">  
-                               <td>{{x.first_name}}</td>  
-                               <td>{{x.last_name}}</td>  
-                               <td><button ng-click="updateData(x.id, x.first_name, x.last_name)" class="btn btn-info btn-xs">Update</button></td>  
-                          </tr>  
-                     </table>  
-                </div>  
-           </div>  
-      </body>  
- </html>  
- <script>  
- var app = angular.module("myapp",[]);  
- app.controller("usercontroller", function($scope, $http){  
-      $scope.btnName = "ADD";  
-      $scope.insertData = function(){  
-           if($scope.firstname == null)  
-           {  
-                alert("First Name is required");  
-           }  
-           else if($scope.lastname == null)  
-           {  
-                alert("Last Name is required");  
-           }  
-           else  
-           {  
-                $http.post(  
-                     "insert.php",  
-                     {'firstname':$scope.firstname, 'lastname':$scope.lastname, 'btnName':$scope.btnName, 'id':$scope.id}  
-                ).success(function(data){  
-                     alert(data);  
-                     $scope.firstname = null;  
-                     $scope.lastname = null;  
-                     $scope.btnName = "ADD";  
-                     $scope.displayData();  
-                });  
-           }  
-      }  
-      $scope.displayData = function(){  
-           $http.get("select.php")  
-           .success(function(data){  
-                $scope.names = data;  
-           });  
-      }  
-      $scope.updateData = function(id, first_name, last_name){  
-           $scope.id = id;  
-           $scope.firstname = first_name;  
-           $scope.lastname = last_name;  
-           $scope.btnName = "Update";  
-      }  
- });  
- </script>  
+<!doctype html>
+<html lang="en">
+
+<head>
+     <title>Title</title>
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+     <!-- Bootstrap CSS v5.0.2 -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+
+</head>
+
+<body>
+     <div class="item form-group">
+          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Image">
+               Upload file
+          </label>
+          <div class="col-md-6 col-sm-6 col-xs-12">
+               <input type="file" id="img" name="img" ng-model="VendorsObject.Image" />
+          </div>
+     </div>
+     <button id="submit" type="submit" ng-disabled=formAddVendors.$invalid
+          class="btn btn-success">{{VendorButton}}</button>
+
+     <script>
+          $scope.manageVendors = function (vendorObject) {
+               var createvendor = vendorObject;
+               createvendor.UserName = globalValues.userName;
+               var data = RMSService.insertVendors(globalValues.token, createvendor).then(function (response) {
+                    $location.path("home/Vendors");
+               }, function (error) {
+                    console.log(error);
+               })
+          } 
+     </script>
+     <!-- Bootstrap JavaScript Libraries -->
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+          crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+          crossorigin="anonymous"></script>
+</body>
+
+</html>
