--- a/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
+++ b/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
@@ -39,7 +39,8 @@
         <div class="row">
             <div class="col-6">
                 <img src="https://img.icons8.com/office/80/000000/time.png" />
-                <span style="width: 200px;" class=" fw-bold fs-4"> &ensp;
+                <span style="width: 200px;" class=" fw-bold fs-4"
+                > &ensp;
                     Thời gian:
                     {{(timer-timer%60)/60}}:{{timer%60}}</span>
 
@@ -99,7 +100,9 @@
             <div class="col-12">
                 <button class="btn btn-primary float-end"
                     ng-disabled="element[indexQuestion].sub == 0 || formTest.inputQ.$invalid" type="button"
-                    data-bs-toggle="modal" data-bs-target="#staticBackdrop">Trả lời</button>
+                    data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                    
+                    >Trả lời</button>
             </div>
         </div>
 
@@ -143,6 +146,7 @@
                 <button ng-click = "finish()" class="btn btn-danger float-start">
                     Kết thúc bài kiểm tra
                 </button>
+
             </div>
         </div>
     </section>
