--- a/Front-end_Tiennh21/Assignment/layout/ManagerAccounts.html
+++ b/Front-end_Tiennh21/Assignment/layout/ManagerAccounts.html
@@ -19,19 +19,16 @@
 
 
 <div class="container" ng-controller="myAddAccount">
-    <div ng-show="isLoading" class="loading">
-        <div class="spinner-border text-primary spinner-center" role="status">
-        </div>
-    </div>
+
     <div class="row mt-5">
         <div class="col-xs-12 col-lg-4 wrap-form-head-register mt-5" id="register">
             <div class="container"
                 ng-init="studentRegister.gender = 'true'; studentRegister.marks = '0'; studentRegister.role = '1'">
                 <form name="formRegister" novalidate>
-                    <h4 class="mt-3 mb-4">Start now</h4>
+                    <h4 class="mt-3 mb-4">Đăng ký thành viên</h4>
                     <div class="mt-3 ">
                         <input ng-model="studentRegister.username" name="username" type="text" class="form-control"
-                            id="exampleFormControlInput1" placeholder="Username" minlength="5" required>
+                            id="exampleFormControlInput1" placeholder="Username" minlength="5" Check-User required>
                         <div ng-hide="formRegister.username.$untouched ||formRegister.username.$valid">
                             <small ng-show="formRegister.username.$error.required" class="text-danger fst-italic">
                                 Username không để trống
@@ -39,6 +36,8 @@
                             <small ng-show="formRegister.username.$error.minlength" class="text-danger fst-italic">
                                 Username trên 5 ký tự
                             </small>
+                            <small class="text-danger fst-italic"
+                                ng-show="formRegister.username.$error.check_user">Trùng Username</small>
                         </div>
                     </div>
 
@@ -89,7 +88,7 @@
                     </div>
                     <div class="mt-3 ">
                         <input ng-model="studentRegister.email" name="email" type="email" class="form-control"
-                            id="exampleFormControlInput1" placeholder="email@example.com" required>
+                            id="exampleFormControlInput1" placeholder="email@example.com" Check-Email required>
 
                         <div ng-hide="formRegister.email.$untouched || formRegister.email.$valid">
                             <small class="text-danger fst-italic" ng-show="formRegister.email.$error.required">Email
@@ -97,6 +96,8 @@
                                 trống</small>
                             <small class="text-danger fst-italic" ng-show="formRegister.email.$error.email">Email không
                                 đúng định dạng</small>
+                            <small class="text-danger fst-italic" ng-show="formRegister.email.$error.check_email">Trùng
+                                email</small>
                         </div>
                     </div>
                     <div class="mt-3 ">
@@ -144,6 +145,24 @@
                     </div>
 
                     <div class="mt-3 ">
+                        <label for="exampleFormControlInput1" class="form-label">Role</label>
+                        <div class="form-check">
+                            <input ng-model="studentRegister.role" class="form-check-input" type="radio"
+                                name="flexRadioDefault1" id="flexRadioDefault12" value="1">
+                            <label class="form-check-label" for="flexRadioDefault12">
+                                Admin
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input ng-model="studentRegister.role" class="form-check-input" type="radio"
+                                name="flexRadioDefault1" id="flexRadioDefault22" checked value="0">
+                            <label class="form-check-label" for="flexRadioDefault22">
+                                Customer
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="mt-3 " ng-show="index == -1">
                         <div class="form-check">
                             <input name="checkBox" ng-model="chkselct" class="form-check-input" type="checkbox" value=""
                                 id="flexCheckIndeterminate" required>
@@ -163,17 +182,19 @@
                                 Add Account
                             </button>
                             <button value="submit" class="btn btn-primary justify-content-center col-12"
-                                ng-show="index != -1" ng-click="update()" >
+                                ng-show="index != -1" ng-click="update()">
                                 Update Account
                             </button>
+
                         </div>
+            
                     </div>
                 </form>
 
             </div>
         </div>
 
-        <div class="col-xs-12 col-lg-8  mt-5">
+        <div class="col-xs-12 col-lg-8 mt-5">
             <table class="table table-striped table-responsive mt-3">
                 <thead>
                     <tr class="text-white fst-italic fst-bold">
@@ -185,7 +206,7 @@
                         <th>Email</th>
                         <th>Vai trò</th>
                         <th>Học Phí</th>
-                        <th colspan="2" class="text-center">Thao tác</th>
+                        <th colspan="3" class="text-center">Thao tác</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -221,10 +242,17 @@
                                                 data-bs-dismiss="modal">Đóng</button>
                                             <button type="button" ng-click="onDelete($index)" data-bs-dismiss="modal"
                                                 class="btn btn-danger">Xóa</button>
+                                                
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
+                           
+                        </td>
+                        <td>
+                            <button class="btn btn-success" ng-click="clear()"
+                            >Mới</button>
                         </td>
                     </tr>
                 </tbody>
