--- a/Front-end_Tiennh21/Assignment/layout/HomePage.html
+++ b/Front-end_Tiennh21/Assignment/layout/HomePage.html
@@ -134,7 +134,7 @@
                             id="exampleFormControlInput1" placeholder="Ngày sinh (yyyy-mm-dd)"
                             pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" required>
 
-                        <div ng-hide="formRegister.email.$untouched || formRegister.email.$valid">
+                        <div ng-hide="formRegister.birthday.$untouched || formRegister.birthday.$valid">
                             <small ng-show="formRegister.birthday.$error.required" class="fst-italic text-danger">Vui
                                 lòng
                                 nhập ngày sinh</small>
