--- a/Front-end_Tiennh21/Assignment/layout/CreateQuetions.html
+++ b/Front-end_Tiennh21/Assignment/layout/CreateQuetions.html
@@ -1,8 +1,8 @@
 <div class="container" ng-controller="createQuetions">
     <div class="row">
         <div class="text-center">
-            <img src="images/logos/{{subject.Logo}}" alt="Sample project image" class="img-fluid img-responsive text-center"
-                style="width: 300px;">
+            <img src="images/logos/{{subject.Logo}}" alt="Sample project image"
+                class="img-fluid img-responsive text-center" style="width: 300px;">
         </div>
 
         <div class="col-md-12 wrap-form-head-register mt-5">
@@ -12,61 +12,43 @@
                     <div class="mt-3 ">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">Tên Câu Hỏi</span>
-                            <input
-                            ng-model = "creQuetion.Text"
-                            type="text" class="form-control" placeholder="Username" aria-label="Username"
-                                aria-describedby="basic-addon1">
+                            <input ng-model="creQuetion.Text" type="text" class="form-control" placeholder="Username"
+                                aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="mt-3 ">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">Answer 1</span>
-                            <input
-                            ng-model = "creQuetion.Answer1"
-                            
-                            
-                            type="text" class="form-control" placeholder="Username" aria-label="Username"
-                                aria-describedby="basic-addon1">
+                            <input ng-model="creQuetion.Answer1" type="text" class="form-control" placeholder="Username"
+                                aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="mt-3 ">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">Answer 2</span>
-                            <input
-                            ng-model = "creQuetion.Answer2"
-                            
-                            type="text" class="form-control" placeholder="Username" aria-label="Username"
-                                aria-describedby="basic-addon1">
+                            <input ng-model="creQuetion.Answer2" type="text" class="form-control" placeholder="Username"
+                                aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="mt-3 ">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">Answer 3</span>
-                            <input
-                            ng-model = "creQuetion.Answer3"
-                            
-                            type="text" class="form-control" placeholder="Username" aria-label="Username"
-                                aria-describedby="basic-addon1">
+                            <input ng-model="creQuetion.Answer3" type="text" class="form-control" placeholder="Username"
+                                aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="mt-3 ">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">Answer 4</span>
-                            <input
-                            ng-model = "creQuetion.Answer4"
-                            
-                            type="text" class="form-control" placeholder="Username" aria-label="Username"
-                                aria-describedby="basic-addon1">
+                            <input ng-model="creQuetion.Answer4" type="text" class="form-control" placeholder="Username"
+                                aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="mt-3 ">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">Marks</span>
-                            <input
-                            ng-model = "creQuetion.Marks"
-                            
-                            type="number" min="1" max="10" class="form-control" placeholder="Username" aria-label="Username"
-                                aria-describedby="basic-addon1">
+                            <input ng-model="creQuetion.Marks" type="number" min="1" max="10" class="form-control"
+                                placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
 
@@ -74,9 +56,7 @@
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">Correct answer</span>
 
-                            <select
-                            ng-model = "creQuetion.AnswerId"
-                            class="form-select" name="" id="">
+                            <select ng-model="creQuetion.AnswerId" class="form-select" name="" id="">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -89,14 +69,17 @@
 
                     <div class="row mt-4 mb-4">
                         <div class="row">
-                            <button value="submit" class="btn btn-primary justify-content-center"
-                                ng-click="create()" ng-disabled="formRegister.$invalid">
+                            <button value="submit" class="btn btn-primary justify-content-center" ng-click="create()"
+                                ng-disabled="formRegister.$invalid"
+                                ng-show="index == -1" 
+                                >
                                 Create Quetion
                             </button>
-                            <!-- <button value="submit" class="btn btn-primary justify-content-center mt-4"
+                            
+                            <button value="submit" class="btn btn-primary justify-content-center mt-4"
                                 ng-show="index != -1" ng-click="update()">
                                 Update Quetion
-                            </button> -->
+                            </button>
                         </div>
 
                     </div>
@@ -106,9 +89,9 @@
         </div>
 
         <div class="col-md-12">
-            <table class="table table-hover">
+            <table class="table table-hover table-info table-bordered mt-5">
                 <thead>
-                    <tr>
+                    <tr class="text-dark">
                         <th>Id Quetions</th>
                         <th>Name</th>
                         <th>Answer</th>
@@ -118,16 +101,45 @@
                 </thead>
 
                 <tbody>
-                    <tr ng-repeat="st in quetions" class="text-white">
-                        <th>{{st.id}}</th>
-                        <th>{{st.Text}}</th>
-                        <th>{{st.AnswerId}}</th>
-                        <th>{{st.Marks}}</th>
-                        <th>
+                    <tr ng-repeat="st in quetions" class="text-dark">
+                        <td>{{st.id}}</td>
+                        <td>{{st.Text}}</td>
+                        <td>{{st.AnswerId}}</td>
+                        <td>{{st.Marks}}</td>
+                        <td class="text-dark">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal{{st.id}}">
+                                Xoá
+                            </button>
 
-                            <button class="btn btn-danger">Xoá</button>
-                            <button class="btn btn-primary">Edit</button>
-                        </th>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal{{st.id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Xoá ?</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Bạn muốn xoá chứ ?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-danger"
+                                            ng-click="onDelete($index)"
+                                            data-bs-dismiss="modal"
+                                            >Yes</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="btn btn-primary" ng-click="edit($index)">Edit</button>
+                            <button class="btn btn-success" ng-click="clear()">New</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
