--- a/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
+++ b/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
@@ -20,7 +20,7 @@
                                 Không</button>
                         </div>
                         <div class=" col-lg-6 d-flex justify-content-end">
-                            <button ng-click="mark(); element[indexQuestion].sub = 0" class="btn btn-success col-lg-10 "
+                            <button ng-click="mark(); element[indexQuestion].sub = 0; move(indexQuestion + 1) " class="btn btn-success col-lg-10 "
                                 data-bs-dismiss="modal">
                                 <img src="https://img.icons8.com/fluency/32/000000/checkmark.png" />
                                 Có</button>
